[gd_scene load_steps=9 format=3 uid="uid://cn1v41nj5v32j"]

[ext_resource type="Script" path="res://Enemy/enemy.gd" id="1_7rt6w"]
[ext_resource type="Material" uid="uid://mxypioyuyx3b" path="res://Enemy/enemy_material.tres" id="2_63dr3"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="3_ne17v"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="4_o3ku2"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="5_eqo7u"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="6_nik6e"]

[sub_resource type="CircleShape2D" id="CircleShape2D_wntgq"]
radius = 20.0

[sub_resource type="CircleShape2D" id="CircleShape2D_nliq5"]
radius = 20.0

[node name="Enemy" type="CharacterBody2D" groups=["enemies"]]
material = ExtResource("2_63dr3")
collision_layer = 0
collision_mask = 0
slide_on_ceiling = false
script = ExtResource("1_7rt6w")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(2, 2)

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
unique_name_in_owner = true
path_desired_distance = 30.0
avoidance_enabled = true
radius = 18.0
neighbor_distance = 60.0

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("CircleShape2D_wntgq")

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("CircleShape2D_nliq5")

[node name="StunTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.15
one_shot = true

[node name="StateChart" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("3_ne17v")

[node name="Root" type="Node" parent="StateChart"]
script = ExtResource("4_o3ku2")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateChart/Root"]
script = ExtResource("5_eqo7u")

[node name="ToMove" type="Node" parent="StateChart/Root/Idle"]
script = ExtResource("6_nik6e")
to = NodePath("../../Move")
event = &"move"
delay_in_seconds = "0.0"

[node name="ToAttack" type="Node" parent="StateChart/Root/Idle"]
script = ExtResource("6_nik6e")
to = NodePath("../../Attack")
event = &"attack"
delay_in_seconds = "0.0"

[node name="ToHit" type="Node" parent="StateChart/Root/Idle"]
script = ExtResource("6_nik6e")
to = NodePath("../../Hit")
event = &"hit"
delay_in_seconds = "0.0"

[node name="Move" type="Node" parent="StateChart/Root"]
script = ExtResource("5_eqo7u")

[node name="ToIdle" type="Node" parent="StateChart/Root/Move"]
script = ExtResource("6_nik6e")
to = NodePath("../../Idle")
event = &"idle"
delay_in_seconds = "0.0"

[node name="ToAttack" type="Node" parent="StateChart/Root/Move"]
script = ExtResource("6_nik6e")
to = NodePath("../../Attack")
event = &"attack"
delay_in_seconds = "0.0"

[node name="ToHit" type="Node" parent="StateChart/Root/Move"]
script = ExtResource("6_nik6e")
to = NodePath("../../Hit")
event = &"hit"
delay_in_seconds = "0.0"

[node name="Attack" type="Node" parent="StateChart/Root"]
script = ExtResource("5_eqo7u")

[node name="ToIdle" type="Node" parent="StateChart/Root/Attack"]
script = ExtResource("6_nik6e")
to = NodePath("../../Idle")
event = &"idle"
delay_in_seconds = "0.0"

[node name="ToMove" type="Node" parent="StateChart/Root/Attack"]
script = ExtResource("6_nik6e")
to = NodePath("../../Move")
event = &"move"
delay_in_seconds = "0.0"

[node name="ToHit" type="Node" parent="StateChart/Root/Attack"]
script = ExtResource("6_nik6e")
to = NodePath("../../Hit")
event = &"hit"
delay_in_seconds = "0.0"

[node name="Hit" type="Node" parent="StateChart/Root"]
script = ExtResource("5_eqo7u")

[node name="ToStunned" type="Node" parent="StateChart/Root/Hit"]
script = ExtResource("6_nik6e")
to = NodePath("../../Stunned")
event = &"stunned"
delay_in_seconds = "0.0"

[node name="ToDeath" type="Node" parent="StateChart/Root/Hit"]
script = ExtResource("6_nik6e")
to = NodePath("../../Death")
event = &"die"
delay_in_seconds = "0.0"

[node name="Stunned" type="Node" parent="StateChart/Root"]
script = ExtResource("5_eqo7u")

[node name="ToIdle" type="Node" parent="StateChart/Root/Stunned"]
script = ExtResource("6_nik6e")
to = NodePath("../../Idle")
event = &"stun_finished"
delay_in_seconds = "0.0"

[node name="Death" type="Node" parent="StateChart/Root"]
script = ExtResource("5_eqo7u")

[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_velocity_computed"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="timeout" from="StunTimer" to="." method="_on_stun_timer_timeout"]
[connection signal="state_entered" from="StateChart/Root/Idle" to="." method="_on_idle_state_entered"]
[connection signal="state_entered" from="StateChart/Root/Move" to="." method="_on_move_state_entered"]
[connection signal="state_exited" from="StateChart/Root/Move" to="." method="_on_move_state_exited"]
[connection signal="state_physics_processing" from="StateChart/Root/Move" to="." method="_on_move_state_physics_processing"]
[connection signal="state_entered" from="StateChart/Root/Attack" to="." method="_on_attack_state_entered"]
[connection signal="state_processing" from="StateChart/Root/Attack" to="." method="_on_attack_state_processing"]
[connection signal="state_entered" from="StateChart/Root/Hit" to="." method="_on_hit_state_entered"]
[connection signal="state_entered" from="StateChart/Root/Stunned" to="." method="_on_stunned_state_entered"]
[connection signal="state_entered" from="StateChart/Root/Death" to="." method="_on_death_state_entered"]
